--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button v-on:click="add(5)">Add 5</button>
       <button v-on:click="add(1)">Add 1</button>
       <!-- 1) Connect the buttons and calculate a value (a number) -->
-       <p>Result: {{ counter }}</p>
+       <p>Result: {{ result }}</p>
       <!-- Show "Not there yet" until you reach a result of exactly 37 -->
       
       <!-- Show "Too much!" if the result is greater than 37 -->
